--- a/about.html
+++ b/about.html
@@ -7,12 +7,8 @@
 </head>
 
 <body>
-    <font color="red"> home page</font>
-    <ul>
-        <li>
-            <a href="./about.html">about me</a>
-        </li>
-    </ul>
+    <font color="red">hello about </font>
+
 </body>
 
 </html>
